# airspace-advisor

./: .gitignore  LICENSE  README.md
src/advisor_pkg/: package.xml  setup.py
src/advisor_pkg/Figures and tables/Appendices/Testing Appendix/: test_calculate_collision_risk.py  test_calculate_new_coordinates.py  test_format_data_example.py
src/advisor_pkg/Figures and tables/Chapter 5/: advisor_log_droneweb.pngZone.Identifier  system_design_v04.pngZone.Identifier
src/advisor_pkg/Report/: Airspace_Advisor__A_dynamic_data_driven_software_for_supporting_UAS_pilots_during_complex_missions.pdfZone.Identifier
src/advisor_pkg/launch/: advisor.launch.py
src/advisor_pkg/my_first_pkg/: advisor_log_text_req.py  air_traffic_to_qgc.py  aircraft_json_post_example.py  calc_collision.py  calculate_collision_risk.py  calculate_new_coordinates.py  col_test.py  col_test_file.py  collision.py  collision_advisor.py  first_pkg.py  format_data_example.py  publisher.py  sub.py  subscriber.py  test_file.py  tts_node.py
src/advisor_pkg/not_needed_files/: col_test_file.py  mavros_drone_info.py  mission_collision.py  pretty_json.py  test_file.py  text_file2.py  tts_test.py
src/advisor_pkg/test/: test_calculate_collision_risk.py  test_format_data_example.py  test_math.py  test_mission_collision.py  test_my_first_pkg.py  test_publiser_subscriber.py  test_subscriber_advisor.py
