<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_first_pkg</name>
  <version>0.0.0</version>
  <description>Airspace advisor for Airtrack</description>
  <maintainer email="mihoe18@student.sdu.dk">Mikkel</maintainer>
  <license>MIT License</license>
  
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>python3-geopy</exec_depend>
  <exec_depend>gTTS</exec_depend>
  <exec_depend>playsound</exec_depend>
  <exec_depend>python-pygame</exec_depend>



  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
